# PoPE-pytorch

./: README.md  pyproject.toml
PoPE_pytorch/: PoPE.py  __init__.py  attention.py  pope.py  pope_nd.py  triton_pope.py  triton_pope_flash_attn.py
tests/: test_flash_attn.py  test_pope.py  test_readme.py  test_triton.py
